RESOLVED FIXED306243
[WPE][GTK] scrollend event not fired after touch scroll (kinetic/momentum scroll) ends
https://bugs.webkit.org/show_bug.cgi?id=306243
Summary [WPE][GTK] scrollend event not fired after touch scroll (kinetic/momentum scr...
klee
Reported 2026-01-25 19:48:29 PST
The scrollend event is not dispatched when touch scrolling completes. When scrolling with touch input, the scroll continues with momentum (kinetic scroll) after lifting the finger. However, when this kinetic scroll animation finishes, the scrollend event is not fired.
Attachments
klee
Comment 1 2026-01-25 19:51:11 PST
I'm working on this.
klee
Comment 2 2026-01-26 08:51:49 PST
EWS
Comment 3 2026-03-11 02:35:38 PDT
Committed 309048@main (6ccb1f5cd3dd): <https://commits.webkit.org/309048@main> Reviewed commits have been landed. Closing PR #57263 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.