[canvas][gtk] Dispatch scrollend for non-animated wheel-stream end markers (#26)

webkit.org/b/306243 wired scrollend dispatch on GTK/WPE for kinetic scrolls
by routing ScrollAnimationKinetic through ScrollingEffectsController::
scrollAnimationDidEnd. That covers touch / momentum scrolling, which uses
the animation path. testdriver wheel events (used by web-platform-tests
scroll_support.js) take a different path: they set hasPreciseScrollingDeltas
on the PlatformWheelEvent, which forces ScrollBehavior::NeverAnimate in
ScrollAnimator::handleWheelEvent — bypassing animation entirely, so the
kinetic-side fix never fires.

The end-marker events of those streams (PlatformWheelEventPhase::Ended with
momentumPhase None, or momentumPhase::Ended) reach handleWheelEventInternal
but get filtered by zero-delta short-circuits or DOM dispatch before any
scrollend-dispatch site sees them. Tracking scroll state across the wheel
stream and dispatching scrollend on the end marker — gated on the latched
scrollable area being awaiting-scrollend — closes that gap without
disturbing the already-correct animated paths.

Unblocks the two onpaint-after-scroll{,-2}.html corpus tests in #1 (PRD)
that were blocked on this.

https://bugs.webkit.org/show_bug.cgi?id=NNNNNN